...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Directions">


    <TextView
        android:id="@+id/directionsSet"
        android:layout_width="355dp"
        android:layout_height="532dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="92dp"
        android:scrollbars="vertical"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/next_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:onClick="nextPressed"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/prev_btn"
        android:layout_width="wrap_content"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directionsSet"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="24dp"
        android:text="Continue"
        android:onClick="continuePressed"
        app:layout_constraintBottom_toTopOf="@+id/prev_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/skip_btn"
        app:layout_constraintTop_toBottomOf="@+id/directionsSet"
        app:layout_constraintVertical_bias="1.0" />
...
