<resources>
    <string name="app_name">ZooSeeker</string>
    <string name="search">Search</string>
    <string name="dayplanner">dayPlanner</string>
    <string name="title_activity_directions">Directions</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_route_plan">RoutePlan</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
...
